--- a/SMPv2/app/src/main/res/layout/activity_signup.xml
+++ b/SMPv2/app/src/main/res/layout/activity_signup.xml
@@ -39,16 +39,17 @@
 
     <ImageView
         android:id="@+id/logoImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="309dp"
+        android:layout_height="140dp"
         android:layout_alignBottom="@+id/nameTextView"
         android:layout_alignParentStart="true"
         android:layout_marginStart="86dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="87dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:srcCompat="@drawable/logo2" />
 
     <Button
         android:id="@+id/signupButton"
