--- a/SMPv2/app/src/main/res/layout/activity_signup.xml
+++ b/SMPv2/app/src/main/res/layout/activity_signup.xml
@@ -7,41 +7,42 @@
     tools:context=".SignupActivity">
 
     <TextView
-        android:id="@+id/addressTextView"
+        android:id="@+id/UsernameTextView"
         android:layout_width="63dp"
         android:layout_height="30dp"
-        android:layout_alignEnd="@+id/phoneTextView"
+        android:layout_alignEnd="@+id/confirmTextView"
         android:layout_alignParentTop="true"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="125dp"
-        android:layout_marginEnd="18dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginTop="130dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginBottom="25dp"
         android:text="Name"
-        app:layout_constraintBottom_toTopOf="@+id/postalTextView"
-        app:layout_constraintEnd_toStartOf="@+id/addressEditText"
+        app:layout_constraintBottom_toTopOf="@+id/passwordTextView"
+        app:layout_constraintEnd_toStartOf="@+id/usernameEditText"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/logoImageView" />
 
     <EditText
-        android:id="@+id/postalEditText"
+        android:id="@+id/passwordEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="3dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="15dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="29dp"
         android:ems="10"
-        android:inputType="textPassword"
+        android:inputType="textVisiblePassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/postalTextView"
-        app:layout_constraintTop_toBottomOf="@+id/addressEditText" />
+        app:layout_constraintStart_toEndOf="@+id/passwordTextView"
+        app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />
 
     <ImageView
         android:id="@+id/logoImageView"
-        android:layout_width="309dp"
-        android:layout_height="140dp"
-        android:layout_alignBottom="@+id/nameTextView"
+        android:layout_width="312dp"
+        android:layout_height="128dp"
+        android:layout_alignBottom="@+id/loginTextView"
         android:layout_alignParentStart="true"
         android:layout_marginStart="86dp"
         android:layout_marginTop="20dp"
@@ -58,53 +59,55 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="152dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="64dp"
         android:layout_marginEnd="171dp"
         android:onClick="register"
         android:text="Sign Up"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/confirmEditText" />
 
 
     <EditText
-        android:id="@+id/phoneEditText"
+        android:id="@+id/confirmEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="5dp"
         android:layout_marginTop="18dp"
-        android:layout_marginEnd="45dp"
+        android:layout_marginEnd="40dp"
         android:layout_marginBottom="22dp"
-        android:layout_toEndOf="@+id/postalTextView"
+        android:layout_toEndOf="@+id/passwordTextView"
         android:ems="10"
-        android:inputType="textPersonName"
+        android:inputType="textVisiblePassword"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/phoneTextView"
-        app:layout_constraintTop_toBottomOf="@+id/postalEditText" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/confirmTextView"
+        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />
 
 
     <TextView
-        android:id="@+id/postalTextView"
+        android:id="@+id/passwordTextView"
         android:layout_width="68dp"
         android:layout_height="34dp"
-        android:layout_alignTop="@+id/cityEditText"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="25dp"
+        android:layout_alignTop="@+id/usernameEditText"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="8dp"
         android:layout_toStartOf="@+id/logoImageView"
         android:text="Password"
-        app:layout_constraintBottom_toTopOf="@+id/phoneTextView"
-        app:layout_constraintEnd_toStartOf="@+id/postalEditText"
-        app:layout_constraintHorizontal_bias="0.791"
+        app:layout_constraintBottom_toTopOf="@+id/confirmTextView"
+        app:layout_constraintEnd_toStartOf="@+id/passwordEditText"
+        app:layout_constraintHorizontal_bias="0.421"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addressTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/UsernameTextView"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/nameTextView"
+        android:id="@+id/loginTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/phoneEditText"
+        android:layout_alignStart="@+id/confirmEditText"
         android:layout_alignParentTop="true"
         android:layout_marginStart="170dp"
         android:layout_marginTop="38dp"
@@ -118,34 +121,33 @@
         app:layout_constraintTop_toBottomOf="@+id/logoImageView" />
 
     <TextView
-        android:id="@+id/phoneTextView"
+        android:id="@+id/confirmTextView"
         android:layout_width="89dp"
         android:layout_height="41dp"
-        android:layout_alignEnd="@+id/addressEditText"
+        android:layout_alignEnd="@+id/usernameEditText"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="5dp"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="29dp"
         android:text="Confirm Password"
-        app:layout_constraintEnd_toStartOf="@+id/phoneEditText"
+        app:layout_constraintEnd_toStartOf="@+id/confirmEditText"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/postalTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordTextView" />
 
 
     <EditText
-        android:id="@+id/addressEditText"
+        android:id="@+id/usernameEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/addressTextView"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="23dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="47dp"
+        android:layout_marginTop="48dp"
+        android:layout_marginEnd="60dp"
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/addressTextView"
-        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
+        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />
 
 
     <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
@@ -158,8 +160,10 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/phoneTextView">
+        app:layout_constraintTop_toBottomOf="@+id/confirmTextView"
+        app:layout_constraintVertical_bias="0.32">
 
         <RadioButton
             android:id="@+id/userRB"
@@ -171,7 +175,7 @@
             android:text="User"
             app:layout_constraintEnd_toStartOf="@+id/businessRB"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/phoneTextView" />
+            app:layout_constraintTop_toBottomOf="@+id/confirmTextView" />
 
         <RadioButton
             android:id="@+id/businessRB"
@@ -183,7 +187,7 @@
             android:text="Business"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/userRB"
-            app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />
+            app:layout_constraintTop_toBottomOf="@+id/confirmEditText" />
 
     </RadioGroup>
 </android.support.constraint.ConstraintLayout>
