--- a/SMPv2/app/src/main/res/layout/add_promotion_dialogue.xml
+++ b/SMPv2/app/src/main/res/layout/add_promotion_dialogue.xml
@@ -4,24 +4,12 @@
     android:orientation="vertical">
 
     <EditText
-        android:id="@+id/editTextPromotionName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="@string/add_promotion_name" />
-
-    <TextView
-        android:id="@+id/textViewPromotionTier"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/add_promotion_tier">
-    </TextView>
-
-    <NumberPicker
-        android:id="@+id/numberPickerPromotionTier"
+        android:id="@+id/editTextPromotionPoints"
         android:layout_width = "wrap_content"
-        android:layout_height = "wrap_content">
-    </NumberPicker>
+        android:layout_height = "wrap_content"
+        android:text="@string/add_promotion_points"
+        android:hint="@string/add_promotion_minimum_points">
+    </EditText>
 
     <EditText
         android:id="@+id/editTextPromotionDetails"
