--- a/SMPv2/app/src/main/res/layout/activity_login.xml
+++ b/SMPv2/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
         android:layout_alignBottom="@+id/submitButton"
         android:layout_alignParentTop="false"
         android:layout_centerInParent="true"
-        android:layout_marginStart="34sp"
+        android:layout_marginStart="20dp"
         android:layout_marginEnd="80dp"
         android:layout_marginBottom="2dp"
         android:ems="10"
