--- a/SMPv2/app/src/main/res/layout/activity_signup.xml
+++ b/SMPv2/app/src/main/res/layout/activity_signup.xml
@@ -33,7 +33,7 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="29dp"
         android:ems="10"
-        android:inputType="textVisiblePassword"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/passwordTextView"
         app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />
@@ -79,7 +79,7 @@
         android:layout_marginBottom="22dp"
         android:layout_toEndOf="@+id/passwordTextView"
         android:ems="10"
-        android:inputType="textVisiblePassword"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/signupButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
