--- a/SMPv2/app/src/main/res/layout/activity_business_dashboard.xml
+++ b/SMPv2/app/src/main/res/layout/activity_business_dashboard.xml
@@ -76,7 +76,7 @@ android:gravity="center"
         android:orientation="horizontal">
 
     <ListView
-        android:id="@+id/lvAnalytics"
+        android:id="@+id/lvPromotions"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
     </ListView>
