--- a/SMPv2/app/src/main/res/layout/activity_analytics.xml
+++ b/SMPv2/app/src/main/res/layout/activity_analytics.xml
@@ -51,4 +51,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/avgDurationTextView"
         app:layout_constraintTop_toBottomOf="@+id/avgVisitsResultTextView" />
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        app:titleTextColor="@android:color/white"></android.support.v7.widget.Toolbar>
+
 </android.support.constraint.ConstraintLayout>
