--- a/SMPv2/app/src/main/res/layout/activity_settings.xml
+++ b/SMPv2/app/src/main/res/layout/activity_settings.xml
@@ -97,6 +97,7 @@
         android:layout_marginTop="36dp"
         android:layout_marginEnd="120dp"
         android:text="Change Password"
+        android:onClick="updateSettings"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/confirmEditText" />
 
