--- a/SMPv2/app/src/main/res/layout/activity_login.xml
+++ b/SMPv2/app/src/main/res/layout/activity_login.xml
@@ -28,9 +28,9 @@
         android:layout_alignBottom="@+id/submitButton"
         android:layout_alignParentTop="false"
         android:layout_centerInParent="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginEnd="67dp"
+        android:layout_marginBottom="30dp"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/submitButton"
@@ -45,16 +45,16 @@
         android:layout_height="63sp"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="121sp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="1dp"
         android:layout_marginEnd="121sp"
-        android:layout_marginBottom="130dp"
+        android:layout_marginBottom="70dp"
         android:onClick="login"
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.74"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cityEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/postalEditText" />
 
 
     <TextView
