--- a/SMPv2/app/src/main/res/layout/list_promotions.xml
+++ b/SMPv2/app/src/main/res/layout/list_promotions.xml
@@ -14,4 +14,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <TextView
+        android:id= "@+id/promotionMinimumPoints"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
