--- a/SMPv2/app/src/main/res/layout/activity_user_points.xml
+++ b/SMPv2/app/src/main/res/layout/activity_user_points.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"/>
 
     <ListView
-        android:id="@+id/lvPromotions"
+        android:id="@+id/lvUserPoints"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
     </ListView>
