--- a/SMPv2/app/src/main/res/values/styles.xml
+++ b/SMPv2/app/src/main/res/values/styles.xml
@@ -13,8 +13,12 @@
         <item name="android:fontFamily">@font/robotoregular</item>
         <item name="fontFamily">@font/robotoregular</item>
         <item name="android:textStyle">normal</item>
+    </style>
 
-
-
+    <style name="listViewFont" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:fontFamily">@font/robotoregular</item>
+        <item name="fontFamily">@font/robotoregular</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textSize">23dp</item>
     </style>
 </resources>
